Fix T93941: geometry proximity breaks with high resolution mesh

The calls to `.fill` were overwriting indices that are processed by
other threads.